@@ -1,2 +1,0 @@
-packages/clib/README
-packages/clib/demo
