@@ -1,1 +1,0 @@
-packages/http/README
