@@ -1,9 +1,0 @@
-#!/bin/sh -e
-
-PACKAGE=swi-prolog-http
-
-# Update library index
-rm -f /usr/lib/swi-prolog/library/INDEX.pl
-echo "make_library_index('/usr/lib/swi-prolog/library/')." | swipl >/dev/null 2>&1
-
-#DEBHELPER#
