@@ -1,0 +1,2 @@
+?package(swi-prolog-nox):needs="text" section="Applications/Programming"\
+  title="SWI-Prolog" command="/usr/bin/swipl"
