@@ -1,2 +1,0 @@
-packages/sgml/sgml.html
-packages/sgml/RDF/rdf2pl.html
