@@ -1,1 +1,0 @@
-packages/table/table.html
