@@ -1,2 +1,0 @@
-?package(swi-prolog):needs="text" section="Applications/Programming"\
-  title="SWI-Prolog" command="/usr/bin/swipl"
